# pipec

./: Cargo.toml  Justfile  README.md  build.rs  pipeline.ebnf  rust-toolchain.toml
.github/workflows/: release.yml
.zed/: debug.json
assets/: demo.tape
src/: id_generator.rs  main.rs  options.rs  parser.rs  pipeline.rs  ui_utils.rs
src/ui/: action.rs  binary.rs  highlight.rs  mod.rs  popup.rs  utils.rs
