[package]
name = "pipec"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0-alpha.4"
crossterm = { version = "0.29", features = [
    "event-stream",
    "use-dev-tty", # This feature is required on MacOS, see https://github.com/crossterm-rs/crossterm/pull/735
    "libc", # To work around bug https://github.com/crossterm-rs/crossterm/issues/935
] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.31"
tui-input = "0.12.1"
append-only-bytes = "0.1.12"
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
peginator = "0.7.0"
itertools = "0.14.0"
bstr = "1.12.0"
recycle_vec = "1.1.2"
async-tempfile = "0.7.0"
arboard = "3.6.0"

# Syntax-highlighting
tree-sitter-highlight = "0.25.8"
tree-sitter-bash = "0.25.0"

[build-dependencies]
peginator_codegen = "0.7.0"

